# laughing-sniffle

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  commands.txt  docker-compose.yml  middle-senior-python-developer--agent.md  pyproject.toml  requirements.txt
.deps/grpcio_tools-1.64.1.dist-info/: RECORD
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
legacy/: __init__.py  requirements.txt
legacy/src/: __init__.py
legacy/src/agent/: __init__.py  config.ini  config.py  dispatcher.py  logging_setup.py  main.py  result_writer.py
legacy/src/agent/inventory/: windows_registry.py
proto/: __init__.py  agent.proto  agent_pb2.py  agent_pb2_grpc.py
services/: __init__.py
services/agent_gateway/: Dockerfile  __init__.py  app.py
services/inventory_service/: app.py  worker.py
services/result_writer/: Dockerfile  __init__.py  app.py  worker.py
tests/: test_config.py  test_dispatcher.py  test_result_writer.py
